# patr

./: .dockerignore  .drone.star  .drone.yml  .editorconfig  .env.sample  .env.template  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .rustfmt.toml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.js  docker-compose.yml  dump.rdb  exec  file  gulpfile.js  history.txt  index.html  initEnvFile.sh  leptosfmt.toml  package-lock.json  package.json  rust-toolchain.toml  select Cargo.lock Cargo.toml api assets config dashboard-frontend drive-frontend dump.rdb macros target from user_unverfied_email_address  shell.nix  sqlx-data.json  tailwind.config.js  tsconfig.client.json  tsconfig.json  tslint.json  webpack.config.js
api/: Cargo.toml  sqlx-data.json
api/examples/: check-api-version.rs  check-version.rs  create-gitea-release.rs  gitea-release.rs  gitea_release.rs  verify-migrations.rs
api/src/: app.rs  macros.rs  main.rs  redis.rs  redis_publisher.rs
api/src/ci/: ci_flow_format.rs  github.rs  mod.rs
api/src/db/: initializer.rs  meta_data.rs  mod.rs  oauth2.rs  organisation.rs  rbac.rs  schema.rs  user.rs
api/src/migrations/: mod.rs
api/src/models/: access_token_data.rs  auditlog.rs  billing.rs  ci.rs  ci_file_format.rs  cloudflare.rs  deployment.rs  digital_ocean.rs  docker_registry.rs  docker_registry_token.rs  email_template.rs  error.rs  managed_database.rs  mod.rs  one_time_token.rs  open_id.rs  rabbitmq.rs  rbac.rs  redis.rs  region.rs  sample_data.rs  secret.rs  twilio_sms.rs  twilio_sms_body.rs
api/src/rabbitmq/: billing.rs  byoc.rs  ci.rs  database.rs  deployment.rs  docker_registry.rs  managed_url.rs  migration_change.rs  mod.rs  static_site.rs
api/src/redis/: auth.rs  keys.rs  mod.rs  rbac.rs  workspace.rs
api/src/routes/: mod.rs
api/src/scheduler/: billing.rs  byoc.rs  ci.rs  domain.rs  managed_url.rs  mod.rs  report_card.rs  syncr.rs  user.rs
api/src/service/: auth.rs  billing.rs  cloudflare.rs  deployment.rs  docker.rs  docker_registry.rs  domain.rs  github_actions_config.rs  managed_database.rs  metrics.rs  mod.rs  organisation.rs  portus.rs  rabbitmq.rs  rbac.rs  region.rs  user.rs  utils.rs  workspace.rs
api/src/syncr/: mod.rs
api/src/test/: mod.rs
api/src/utils/: audit_logger.rs  billing.rs  config.rs  constants.rs  error_data.rs  errors.rs  eve_context.rs  eve_middlewares.rs  extractor.rs  handlebar_registry.rs  last_element_is.rs  limits.rs  logger.rs  mailer.rs  middleware.rs  middlewares.rs  mod.rs  route_handler.rs  router_ext.rs  settings.rs  sms.rs  timeout_ext.rs  token_expiry_handler.rs  validator.rs
cli/: Cargo.toml
cli/src/: app.rs  main.rs  utils.rs
cli/src/commands/: info.rs  login.rs  logout.rs  mod.rs
cli/src/models/: mod.rs
cli/src/utils/: client.rs  mod.rs  storage.rs
cloudflare-ingress/: Cargo.toml  wrangler.toml
cloudflare-ingress/src/: lib.rs  models.rs  utils.rs
components/: Cargo.toml  index.html
components/assets/styles/: index.scss
components/src/: alert.rs  backdrop.rs  checkbox_dropdown.rs  dashboard_container.rs  double_input_slider.rs  error_page.rs  icon.rs  input.rs  input_dropdown.rs  lib.rs  link.rs  log_statement.rs  main.rs  modal.rs  number_picker.rs  otp_input.rs  popover.rs  spinner.rs  status_badge.rs  table_dashboard.rs  textbox.rs  toast.rs
components/src/containers/: mod.rs  page_container.rs
components/src/page_title/: mod.rs  page_description.rs  page_title.rs  tabs.rs  title_container.rs
components/src/pages/: login.rs  mod.rs
components/src/sidebar/: mod.rs  sidebar.rs  sidebar_item.rs  workspace.rs  workspace_item.rs  workspace_switcher.rs
components/src/skeleton/: custom_skeleton.rs  mod.rs  skeleton.rs  skeleton_table_card.rs
components/src/tooltip/: tooltip.rs  tooltip_container.rs
components/src/utils/: alignment.rs  app_route.rs  color.rs  mod.rs  size.rs  variant.rs
controller/: Cargo.toml
controller/src/: app.rs  client.rs  constants.rs  deployment.rs  main.rs  models.rs  utils.rs
frontend/: Cargo.toml  Trunk.toml  expand  index.html  leptosfmt.toml  main.js
frontend/assets/styles/: index.scss
frontend/src/: app.rs  constants.rs  lib.rs  main.rs
frontend/src/api/: mod.rs
frontend/src/components/: a_link.rs  alert.rs  avatar.rs  backdrop.rs  badge.rs  checkbox_dropdown.rs  dashboard_container.rs  double_input_slider.rs  error_page.rs  icon.rs  input.rs  input_dropdown.rs  link.rs  mod.rs  modal.rs  number_picker.rs  otp_input.rs  popover.rs  portal.rs  spinner.rs  status_badge.rs  table_dashboard.rs  textbox.rs  toast.rs  tooltip.rs  tooltip_container.rs
frontend/src/pages/: home.rs  mod.rs  not_found.rs  sign_up.rs
frontend/src/queries/: mod.rs  runner.rs
frontend/src/routes/: logged_in_routes.rs  mod.rs
frontend/src/utils/: app_route.rs  client.rs  color.rs  ext.rs  ext_traits.rs  fetch.rs  hooks.rs  mod.rs  navigator.rs  notification_type.rs  patr_color.rs  routes.rs  sidebar_items.rs  size.rs  state.rs  storage.rs  variant.rs
hosted-frontend/: Cargo.toml
hosted-frontend/assets/styles/: index.scss
hosted-frontend/src/: app.rs  global_state.rs  lib.rs
hosted-frontend/src/api/: mod.rs
hosted-frontend/src/pages/: login.rs  mod.rs
hosted-frontend/src/queries/: mod.rs  runner.rs
hosted-frontend/src/routes/: logged_in_routes.rs  logged_out_routes.rs  mod.rs  workspaced_content.rs  (+1 more)
k8s_agent/: .dockerignore  Cargo.toml  Dockerfile
k8s_agent/src/: main.rs
macros/: Cargo.toml
macros/src/: api_endpoint.rs  closure_as_pinned_box.rs  config.rs  declare_api_endpoint.rs  declare_app_route.rs  declare_stream_endpoint.rs  email_template.rs  has_headers.rs  iterable_module.rs  lib.rs  migrate_query.rs  migrate_query_as.rs  query.rs  query_as.rs  recursive_enum_iter.rs  render.rs  server_fn.rs  settings_component.rs  verify_regex.rs  version.rs
models/: Cargo.toml
models/src/: endpoint.rs  error.rs  lib.rs  permission.rs  request.rs  response.rs  user_data.rs
runners/common/: Cargo.toml
runners/docker/: Cargo.toml
runners/kubernetes/: Cargo.toml
(+2630 files in other folders)
