[workspace]
members = [
    "api",
    "macros",
    "models",
    "controller",
    "cloudflare-ingress",
    "frontend",
    "cli",
]
package.authors = ["Rakshith Ravi <rakshith.ravi@patr.cloud>"]
package.description = "Patr API and all it's dependencies"
package.edition = "2021"
package.rust-version = "1.71"
package.version = "0.18.0"
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.6", default-features = false }
axum-extra = { version = "0.7", default-features = false }
clap = { version = "4", default-features = false }
config = { version = "0.13", default-features = false }
console_error_panic_hook = { version = "0.1", default-features = false }
k8s-openapi = { version = "0.19", default-features = false }
kube = { version = "0.85", default-features = false }
leptos = { version = "0.4", default-features = false }
leptos-use = { version = "0.6", default-features = false }
leptos_declarative = { version = "0.3", default-features = false }
leptos_router = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
macros = { path = "macros", default-features = false }
models = { path = "models", default-features = false }
open = { version = "5", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
reqwest = { version = "0.11", default-features = false }
rustis = { git = "https://github.com/rakshith-ravi/rustis", branch = "feature/dockerfile-changes", default-features = false }
sea-orm = { version = "0.12", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_urlencoded = { version = "0.7", default-features = false }
syn = { version = "2", default-features = false }
tabled = { version = "0.13", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
tower = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
typed-builder = { version = "0.16", default-features = false }
typed-headers = { version = "0.2", default-features = false }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-logger = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false }
worker = { version = "0.0.18", default-features = false }
axum-typed-websockets = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false }
serde_test = { version = "1", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.frontend]
inherits = "release"
opt-level = 'z'
strip = true
