[package]
name = "api"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
argon2 = { workspace = true, features = ["default"] }
axum = { workspace = true, features = ["default", "tracing", "ws", "macros"] }
axum-extra = { workspace = true, features = ["default", "typed-routing"] }
axum-typed-websockets = { workspace = true, features = ["default"] }
config = { workspace = true, features = ["default"] }
frontend = { workspace = true, features = [] }
futures = { workspace = true, features = ["default"] }
jsonwebtoken = { workspace = true, features = ["default"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true, features = ["default"] }
macros = { workspace = true, features = [] }
models = { workspace = true, features = [] }
rustis = { workspace = true, features = [
    "default",
    "pool",
    "tls",
    "redis-json",
    "tokio-tls",
] }
semver = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "uuid",
    "time",
    "ipnetwork",
    "postgres",
] }
time = { workspace = true, features = ["default", "serde-human-readable"] }
tokio = { workspace = true, features = ["default", "full"] }
tokio-tungstenite = { workspace = true, features = [
    "default",
    "rustls-tls-webpki-roots",
    "rustls",
] }
tower = { workspace = true, features = ["default", "full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true, features = ["default", "async-await"] }
tracing-log = { workspace = true, features = ["default"] }
typed-builder = { workspace = true, features = [] }
typed-headers = { workspace = true, features = [] }
