[package]
name = "api"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
argon2 = { workspace = true, features = ["default"] }
axum = { workspace = true, features = ["default", "tracing", "ws", "macros"] }
axum-extra = { workspace = true, features = ["default", "typed-routing"] }
axum-typed-websockets = { workspace = true, features = ["default"] }
base32 = { workspace = true, features = [] }
base64 = { workspace = true, features = ["default"] }
config = { workspace = true, features = ["default"] }
futures = { workspace = true, features = ["default"] }
headers = { workspace = true, features = [] }
hosted-frontend = { workspace = true, features = [] }
ipinfo = { workspace = true, features = [] }
jsonwebtoken = { workspace = true, features = ["default"] }
lazy_static = "1"
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true, features = ["default"] }
macros = { workspace = true, features = [] }
matchit = { workspace = true, features = ["default"] }
models = { workspace = true, features = [] }
once_cell = "1"
opentelemetry = { workspace = true, features = ["default"] }
opentelemetry-otlp = { workspace = true, features = ["default"] }
opentelemetry_sdk = { workspace = true, features = ["default", "rt-tokio"] }
preprocess = { workspace = true, features = [] }
rand = { workspace = true, features = ["default"] }
regex = { workspace = true, features = ["default"] }
reqwest = { workspace = true, features = [
    "default",
    "json",
    "multipart",
    "cookies",
] }
rust-s3 = { workspace = true, features = ["default", "with-tokio"] }
regex = "1"
rustis = { workspace = true, features = [
    "default",
    "pool",
    "tls",
    "redis-json",
    "tokio-tls",
] }
semver = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
sha2 = { workspace = true, features = ["default"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "uuid",
    "time",
    "ipnetwork",
    "postgres",
] }
time = { workspace = true, features = ["default", "serde-human-readable"] }
tokio = { workspace = true, features = ["default", "full"] }
tokio-tungstenite = { workspace = true, features = [
    "default",
    "rustls-tls-webpki-roots",
    "rustls",
] }
totp-rs = { workspace = true, features = ["default", "gen_secret"] }
tower = { workspace = true, features = ["default", "full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true, features = ["default", "async-await"] }
tracing-log = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default"] }
typed-builder = { workspace = true, features = [] }
woothee = { workspace = true, features = ["default"] }
