[package]
description = "A command line tool for managing your Patr resources"
name = "cli"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "patr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["default"] }
async-trait = { workspace = true, features = [] }
clap = { workspace = true, features = ["default", "derive"] }
open = { workspace = true, features = [] }
serde = { workspace = true, features = ["default", "derive"] }
tabled = { workspace = true, features = ["default", "derive"] }
tokio = { workspace = true, features = ["default", "full"] }
