[package]
name = "cloudflare-ingress"
version.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
