[package]
name = "cloudflare-ingress"
description = "The cloudflare worker script that proxies requests to the right cluster"

version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
url = "2"
uuid = { version = "1", features = ["serde", "js"], default-features = false }
worker = "0.0.17"
