[package]
description = "The cloudflare worker script that proxies requests to the right cluster"
name = "cloudflare-ingress"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["default", "derive"] }
url = { workspace = true, features = ["default"] }
uuid = { workspace = true, features = ["serde", "js"] }
worker = { workspace = true, features = [] }
