[package]
name = "components"

authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum-extra = { workspace = true, features = ["typed-routing"] }
log = { workspace = true, features = [] }
models = { workspace = true, features = [] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_urlencoded = { workspace = true, features = [] }
strum = { workspace = true, features = ["default", "derive"] }
tracing = { workspace = true, features = ["attributes"] }
web-sys = { workspace = true, features = [
    "MouseEvent",
    "HtmlInputElement",
    "HtmlElement",
    "DomRect",
    "Element",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { workspace = true, features = ["tracing", "hydrate"] }
leptos-use = { workspace = true, features = [
    "use_document",
    "use_event_listener",
    "use_window",
    "use_cookie",
    "use_clipboard",
] }
leptos_meta = { workspace = true, features = ["hydrate"] }
leptos_router = { workspace = true, features = ["hydrate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true, features = ["default", "tracing", "ws", "macros"] }
leptos = { workspace = true, features = ["tracing", "ssr"] }
leptos-use = { workspace = true, features = [
    "axum",
    "ssr",
    "use_document",
    "use_event_listener",
    "use_window",
    "use_cookie",
    "use_clipboard",
] }
leptos_axum = { workspace = true, features = ["default"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
