[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
name = "controller"
version.workspace = true

[dependencies]
futures = { workspace = true, features = ["default"] }
k8s-openapi = { workspace = true, features = ["v1_24"] }
kube = { workspace = true, features = [
    "client",
    "rustls-tls",
    "ws",
    "runtime",
    "derive"
] }
models = { workspace = true, features = [] }
tokio = { workspace = true, features = ["tracing", "full"] }
serde_json = { workspace = true, features = ["default"] }
