[package]
name = "controller"

authors.workspace = true
description.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true, features = ["default"] }
hex = { workspace = true, features = [] }
k8s-openapi = { workspace = true, features = ["v1_24"] }
kube = { workspace = true, features = [
    "client",
    "rustls-tls",
    "ws",
    "runtime",
    "derive",
] }
models = { workspace = true, features = [] }
schemars = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
sha2 = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = [] }
tokio = { workspace = true, features = ["tracing", "full"] }
tracing = { workspace = true, features = ["default"] }
