[package]
name = "frontend"
description = "The frontend dashboard for Patr"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
leptos = { version = "0.4", features = ["tracing", "csr"] }
leptos-use = { version = "0.6", features = ["storage"] }
leptos_declarative = "0.3"
leptos_router = { version = "0.4", features = ["csr"] }
log = "0.4"
models = { workspace = true }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "DataTransfer",
] }
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
serde_json = "1"
