[package]
description = "The frontend dashboard for Patr"
name = "frontend"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum-extra = { workspace = true, features = ["typed-routing"] }
console_error_panic_hook = { workspace = true, features = [] }
leptos = { workspace = true, features = ["tracing", "hydrate"] }
leptos-use = { workspace = true, features = ["storage"] }
leptos_declarative = { workspace = true, features = [] }
leptos_router = { workspace = true, features = ["hydrate"] }
log = { workspace = true, features = [] }
models = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_urlencoded = { workspace = true, features = [] }
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true, features = ["default"] }
wasm-bindgen = { workspace = true, features = ["default"] }
wasm-logger = { workspace = true, features = [] }
web-sys = { workspace = true, features = [
    "Clipboard",
    "Navigator",
    "DataTransfer",
] }
