[package]
description = "The frontend dashboard for Patr"
name = "frontend"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum-extra = { workspace = true, features = ["typed-routing", "cookie"] }
console_error_panic_hook = { workspace = true, features = [] }
convert_case = { workspace = true, features = [] }
cookie = { workspace = true, features = [] }
http = { workspace = true, features = ["default"] }
leptos_query_devtools = { workspace = true, features = ["csr"] }
log = { workspace = true, features = [] }
macros = { workspace = true, features = [] }
matchit = { workspace = true, features = ["default"] }
models = { workspace = true, features = [] }
preprocess = { workspace = true, features = [] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rand = { workspace = true, features = [] }
semver = { workspace = true, features = [] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true, features = ["default"] }
serde_urlencoded = { workspace = true, features = [] }
strum = { workspace = true, features = ["default", "derive"] }
time = { workspace = true, features = ["default"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true, features = ["default"] }
wasm-bindgen = { workspace = true, features = ["default"] }
wasm-logger = { workspace = true, features = [] }
web-sys = { workspace = true, features = [
    "Clipboard",
    "Navigator",
    "DataTransfer",
    "File",
    "FileList",
    "HtmlInputElement",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { workspace = true, features = ["macros"] }
codee = { workspace = true, features = ["json_serde"] }
leptos = { workspace = true, features = ["tracing", "hydrate"] }
leptos-use = { workspace = true, features = [
    "use_document",
    "use_event_listener",
    "use_window",
    "use_cookie",
    "use_clipboard",
] }
leptos_meta = { workspace = true, features = ["hydrate"] }
leptos_query = { workspace = true, features = ["csr", "hydrate"] }
leptos_router = { workspace = true, features = ["hydrate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true, features = ["default", "tracing", "ws", "macros"] }
codee = { workspace = true, features = ["json_serde"] }
leptos = { workspace = true, features = ["tracing", "ssr"] }
leptos-use = { workspace = true, features = [
    "axum",
    "ssr",
    "use_document",
    "use_event_listener",
    "use_window",
    "use_cookie",
    "use_clipboard",
] }
leptos_axum = { workspace = true, features = ["default"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_query = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
